--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>BMI</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="UTF-8">
+    <meta http-equiv="Refresh" content="0; url='/bmi'" />
 </head>
-<body>
-    <p><a href="/bmi">BMI</a></p>
-</body>
 </html>
